// Copyright (c) 2010 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package enterprise_management;

import "device_management_backend.proto";

// Wrapper around DevicePolicyResponse for caching on disk.
message CachedDevicePolicyResponse {
  // The DevicePolicyResponse wrapped by this message.
  optional DevicePolicyResponse policy = 1;
  // Timestamp noting when this policy was cached.
  optional uint64 timestamp = 2;
  // Flag that is set to true if this device is not managed.
  optional bool unmanaged = 3;
}

// Encapsulates a device ID and the associated device token.
message DeviceCredentials {
  optional string device_id = 1;
  optional string device_token = 2;
}

